<resources>
    <string name="app_name">AgriApoio</string>
    <string name="title_activity_post_list">PostListActivity</string>
    <string name="title">Titulo</string>
    <string name="data">Data</string>
    <string name="hour">Hora</string>
    <string name="temp">Temperatura</string>
    <string name="location">Local</string>
    <string name="description">Descrição</string>
    <string name="image">Imagem</string>
    <string name="title_register">Registros</string>
    <string name="search">Pesquisar</string>
    <string name="detail">Detalhes</string>
    <string name="settings">Ondernar</string>
    <string name="add">Adicionar</string>
    <string name="hintTitle">Digite o Titulo</string>
    <string name="hintDescription">Digite a Descrição</string>
    <string name="hintDate">Digite a Data</string>
    <string name="hintHour">Digite a Hora</string>
    <string name="hintLocation">Digite o Local</string>
    <string name="delete">Deletar</string>
    <string name="default_location">Buscando Local</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Clique aqui para mudar cidade</string>
    <string name="weather_description">Simbolo do tempo</string>
    <string name="back_button_description">Voltar tela Temperatura</string>
    <string name="get_weather">Trocar cidade</string>
    <string name="default_query">Digite nome da cidade</string>
    <string name="consult_temp">Consultar Temperatura</string>
    <string name="change_city">Buscar Cidade</string>
</resources>
