<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/inputTitle"
            android:contentDescription="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTitle"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/inputImage"
            android:contentDescription="@string/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/attachment"
            android:background="#eee"/>

        <EditText
            android:id="@+id/inputDate"
            android:contentDescription="@string/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/inputHour"
            android:contentDescription="@string/hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/inputLocation"
            android:contentDescription="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:gravity="top"
            android:hint="@string/hintDescription"
            android:minHeight="100dp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="end"/>


    </LinearLayout>

</ScrollView>