<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/acction_add"
        android:title="@string/add"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add"/>
    <item
        android:id="@+id/acction_temp"
        android:title="@string/temp"
        app:showAsAction="always"
        android:icon="@drawable/ic_thermometer"/>
    <item
        android:id="@+id/acction_settings"
        android:contentDescription="@string/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>